# aurora

./: .gitignore  Cargo.toml  LICENSE  README.md
fixtures/soda/: annotations.html  annotations.js  assembly-template.html  assembly.js  template.html  trace-template.html  trace.js  viz.js
src/: alignment.rs  alphabet.rs  annotation.rs  chunks.rs  collapse.rs  confidence.rs  main.rs  matrix.rs  pipeline.rs  results.rs  score_params.rs  segments.rs  split.rs  substitution_matrix.rs  support.rs  tandem_repeats.rs  viterbi.rs  viz.rs  windowed_scores.rs
src/viz/: bed.rs  block.rs  mod.rs
