[package]
name = "aurora"
version = "0.1.0"
authors = ["Jack Roddy <jack.w.roddy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
itertools = "0.11.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

